// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="navbar-links"
>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/about"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Sobre
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/materials"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Explore
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_blank"
    to="http://materiabrasil.com.br/"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Escritórios
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/forum"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Fórum
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to={
      Object {
        "pathname": "/auth/sign-up",
        "state": Object {
          "referrer": "/suppliers/new",
        },
      }
    }
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Cadastrar fornecedor
    </h3>
  </div>
  <div>
    SignIn
  </div>
</div>
`;

exports[`with current user renders correctly 1`] = `
<div
  className="navbar-links"
>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/about"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Sobre
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/materials"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Explore
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_blank"
    to="http://materiabrasil.com.br/"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Escritórios
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/forum"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Fórum
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/suppliers/new"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Cadastrar fornecedor
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/profile"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      undefined undefined
    </h3>
  </div>
  <div
    currentUser={Object {}}
  >
    SignOut
  </div>
</div>
`;

exports[`with current user with suppliers renders correctly 1`] = `
<div
  className="navbar-links"
>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/about"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Sobre
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/materials"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Explore
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_blank"
    to="http://materiabrasil.com.br/"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Escritórios
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/forum"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Fórum
    </h3>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/suppliers/undefined"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    />
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/profile"
  >
    Link - 
    <h3
      className="MuiTypography-root-1 MuiTypography-subheading-8 MuiTypography-colorInherit-20"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      undefined undefined
    </h3>
  </div>
  <div
    currentUser={
      Object {
        "suppliers": Array [
          Object {},
          Object {},
        ],
      }
    }
  >
    SignOut
  </div>
</div>
`;
